<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.testservice.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@id/btnStartService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startService"
        android:text="@string/startService" />

    <Button
        android:id="@id/btnStopService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="stopService"
        android:text="@string/stopService" />

    <Button
        android:id="@id/btnBroadcastIntent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="broadcastIntent"
        android:text="@string/broadcastIntent" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade" />

    <EditText
        android:id="@id/txtGrade"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@id/btnAdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addName"
        android:text="@string/addName" />

    <Button
        android:id="@id/btnRetrieve"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="retrieveStudents"
        android:text="@string/retrieveStudents" />

</LinearLayout>